k8s/base/ingress/backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: todo-app
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    traefik.ingress.kubernetes.io/router.middlewares: todo-app-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - localhost
      secretName: todo-app-tls
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
